--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "popmotion": "^9.3.1",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
