--- a/package.json
+++ b/package.json
@@ -38,13 +38,17 @@
   "homepage": "https://github.com/alperg/project2-starter-auth#readme",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "connect-session-sequelize": "^7.0.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "popmotion": "^9.3.1",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.5.1"
   },
   "devDependencies": {
     "eslint": "^7.9.0",
