--- a/package.json
+++ b/package.json
@@ -37,18 +37,20 @@
   },
   "homepage": "https://github.com/alperg/project2-starter-auth#readme",
   "dependencies": {
-    "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "connect-session-sequelize": "^7.0.3",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
     "express-session": "^1.17.1",
+    "helmet": "^4.1.1",
+    "moment": "^2.29.0",
+    "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "popmotion": "^9.3.1",
-    "sequelize": "^6.5.1"
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "eslint": "^7.9.0",
